# autogithubpullmerge

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  ROADMAP.md  agents.md  cfg.json  cfg.yaml  config.json  config.yaml  out.csv  readme.md  specs.md  test_history.db  tmp_history.cpp  tmp_rate  tmp_rate.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  ci.yml  format.yml  lint.yml  rolling-release.yml  test.yml  typecheck.yml
assets/: image-gen-prompt.md
dev/: README.md
docs/: Doxyfile  notifications.md  usage_summary.md
examples/: config.example.json  config.example.toml  config.example.yaml  config.full.example.json  config.full.example.toml  config.full.example.yaml  config.json  config.yaml  single-branches.sh  single-open-prs.sh  tokens.example.yaml
include/: app.hpp  cli.hpp  config.hpp  config_manager.hpp  demo_tui.hpp  github_client.hpp  github_poller.hpp  history.hpp  hook.hpp  log.hpp  mcp_server.hpp  notification.hpp  pat.hpp  poller.hpp  repo_discovery.hpp  rule_engine.hpp  sort.hpp  stray_detection_mode.hpp  token_loader.hpp  tui.hpp  version.hpp  version.hpp.in
include/util/: duration.hpp
libs/: README.md
libs/curl/: renovate.json
libs/json/.github/workflows/: check_amalgamation.yml  codeql-analysis.yml  publish_documentation.yml  scorecards.yml  ubuntu.yml  windows.yml
libs/json/docs/mkdocs/docs/features/: modules.md
libs/json/docs/mkdocs/docs/home/: exceptions.md
libs/json/src/modules/: json.cppm
scripts/: build_linux.sh  build_mac.sh  build_win.bat  build_win.ps1  compile_linux.sh  compile_mac.sh  compile_win.bat  compile_win.ps1  install_linux.sh  install_mac.sh  install_win.bat  install_win.ps1  run_catch_core.sh  update_libs.bat  update_libs.ps1  update_libs.sh  util.sh
src/: CMakeLists.txt  app.cpp  cli.cpp  config.cpp  config_manager.cpp  demo_tui.cpp  giant_temporary_fix.cpp  github_client.cpp  github_poller.cpp  history.cpp  hook.cpp  log.cpp  main.cpp  mcp_server.cpp  notification.cpp  pat.cpp  poller.cpp  repo_discovery.cpp  rule_engine.cpp  token_loader.cpp  tui.cpp
src/util/: duration.cpp
tests/: CMakeLists.txt  test_auto_merge.cpp  test_branch_cleanup.cpp  test_branch_protection.cpp  test_cache_flusher.cpp  test_cli.cpp  test_cli_tokens.cpp  test_config.cpp  test_config_from_json.cpp  test_config_loading.cpp  test_config_manager.cpp  test_curl_http_client.cpp  test_duration.cpp  test_github_api_base.cpp  test_github_client.cpp  test_github_client_accept.cpp  test_github_client_behavior.cpp  test_github_client_concurrent.cpp  test_github_client_delay.cpp  test_github_client_etag.cpp  test_github_client_headers.cpp  test_github_client_retry.cpp  test_github_filter.cpp  test_github_poller.cpp  test_github_rate_limit.cpp  test_history.cpp  test_history_merge.cpp  test_history_quotes.cpp  test_hook_dispatcher.cpp  test_log.cpp  test_main.cpp  test_main_graphql.cpp  test_mcp_server.cpp  test_merge_rules.cpp  test_notification.cpp  test_poller.cpp  test_poller_branch.cpp  test_pr_since.cpp  test_repo_discovery.cpp  test_repo_listing.cpp  (+11 more)
